<resources>
    <string name="app_name">WhisperWave</string>
    <string name="developer_preview">Developer Preview</string>
    <string name="sign_in_to_imessage">Sign in to WhisperWave with your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_otp_to_validate">Enter OTP To Validate</string>
    <string name="resend_otp_in_30_seconds">Resend OTP in 30 Seconds</string>
    <string name="resend">Resend</string>
    <string name="choose">Choose your username</string>
    <string name="username">Username</string>
    <string name="get_started">Get Started</string>
    <string name="messages">Whispers</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="_username">Username</string>
    <string name="test_user_72">Private User</string>
    <string name="_911234567890">+91XXXXXXXXX0</string>
    <string name="todo">TODO</string>
    <string name="hi_">Hi There i am using WhisperWave</string>
    <string name="_10_10">10:10</string>
    <string name="ranjan">Ranjan Kumar Verma</string>
    <string name="log_out">Log Out</string>
    <string name="imessage_user">WhisperWave User</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="connect">Connect</string>
    <string name="dialogue">Whisper </string>
    <string name="visual_dialogue">Visual</string>
    <string name="contact_info">Contact info</string>
</resources>