<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/angled_gradient_background"
    tools:context=".activities.EditUserProfile">

    <TextView
        android:id="@+id/cancelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/cancel"
        android:textSize="24sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveTV"
        android:layout_alignParentEnd="true"
        android:text="@string/save"
        android:textSize="24sp"
        android:textColor="@color/cupertino_grey"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/user_icon"
        android:background="@drawable/circular_shape"
        android:id="@+id/editProfilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/todo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUserName"
        android:padding="12dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text=""
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textColor="@color/dark_receive_chat"
        android:textSize="30sp"
        android:layout_below="@id/editProfilePic"
        android:layout_marginTop="40dp"
        android:background="@drawable/transparent_button_background"
        />
</RelativeLayout>