<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/google_white"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainToolbarRL"
        android:background="@color/google_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainAppBarLL"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/editInMainAppBar"
                android:layout_marginTop="75sp"
                android:layout_marginStart="30sp"
                android:textColor="@color/cupertino_blue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75sp"
                android:layout_marginBottom="15sp"
                android:gravity="center"
                android:padding="8dp"
                android:layout_weight="1"
                android:id="@+id/mainHeadingTV"
                android:textColor="@color/black"
                android:text="@string/messages"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="48sp"
                android:layout_height="50sp"
                android:src="@drawable/user_icon"
                android:id="@+id/mainAppBarProfile"
                android:layout_marginTop="70sp"
                android:layout_marginEnd="30sp"
                android:contentDescription="@string/profile" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainSearchET"
            android:backgroundTint="@color/google_search"
            android:layout_below="@+id/mainAppBarLL"
            android:background="@drawable/rounded_bg"
            android:textSize="25sp"
            android:text="@string/search"
            android:textColor="#3C3C43"
            android:layout_marginStart="25sp"
            android:drawablePadding="10dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25sp"
            android:layout_marginTop="10sp"
            android:padding="8dp"
            app:drawableStartCompat="@drawable/search_ion" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainToolbarRL"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp" />

</RelativeLayout>