<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cupertino_grey"
        android:id="@+id/cv1"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="14sp"
            android:layout_marginEnd="14sp"
            android:layout_marginBottom="14sp"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/black"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/iv1"
        android:layout_below="@+id/cv1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/sign_in_to_imessage"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:ccp_showFlag="false"
            android:background="@color/white"
            android:id="@+id/countryCodeID"
            app:ccp_showNameCode="false" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv1"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/cupertino_blue"
        android:padding="12dp"
        android:text="@string/generate_otp"
        android:textColor="@color/white"
        android:textSize="22sp" />

</RelativeLayout>