<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/angled_gradient_background"
    tools:context=".activities.ProfileActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upperRL">

    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:id="@+id/backFromProfile"
        android:src="@drawable/white_ios_back"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/primaryLL"
            android:orientation="horizontal"
            android:layout_below="@+id/backFromProfile"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="160sp"
                android:layout_height="160sp"
                android:layout_marginTop="20dp"
                android:id="@+id/profilePic"
                android:background="@drawable/circular_shape"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user_icon"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/username"
                    android:layout_marginStart="15dp"
                    android:padding="8dp"
                    android:fontFamily="sans-serif-condensed"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:id="@+id/phonenumber"
                    android:layout_marginStart="15dp"
                    android:padding="8dp"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/primaryLL"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/transparent_button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logOutButton"
        android:text="@string/log_out"
        android:textColor="@color/dark_toolbar"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/transparent_button_background"
        android:layout_marginBottom="80sp"
        />

</RelativeLayout>